force-app/main/default/objects/Account_Plan__c/fields/Account_History__c.field-meta.xml
<CustomField>
    <fullName>Account_History__c</fullName>
    <formula>HYPERLINK(
  &quot;/lightning/r/Account/&quot; &amp; Account__c &amp; &quot;/related/Histories/view&quot;,
  &quot;View Account History&quot;,
  &quot;_blank&quot;
)</formula>
    <label>Account History</label>
    <type>Text</type>
</CustomField>