force-app/main/default/objects/Account_Plan__c/fields/Account_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_Notes__c</fullName>
    <description>MIS-7313</description>
    <label>Account Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>