force-app/main/default/objects/Account_Plan__c/fields/Account_Subscription_Product_Charges__c.field-meta.xml
<CustomField>
    <fullName>Account_Subscription_Product_Charges__c</fullName>
    <formula>HYPERLINK(
  &quot;/lightning/r/00OQB000003vwvB2AQ/view?fv0=&quot; &amp; Account__c,
  &quot;View Report for Account&quot;,
  &quot;_blank&quot;
)</formula>
    <label>Account Subscription Product &amp; Charges</label>
    <type>Text</type>
</CustomField>