force-app/main/default/objects/Account_Plan__c/fields/App_Data__c.field-meta.xml
<CustomField>
    <fullName>App_Data__c</fullName>
    <inlineHelpText>(includes In-App Data, 42 Matters, App Intel, etc)</inlineHelpText>
    <label>App Data:In-App, 42 Matters, App Intel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>