force-app/main/default/objects/Account_Plan__c/fields/App_Data_Opp__c.field-meta.xml
<CustomField>
    <fullName>App_Data_Opp__c</fullName>
    <label>App Data Opp $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>