force-app/main/default/objects/Account_Plan__c/fields/Apps__c.field-meta.xml
<CustomField>
    <fullName>Apps__c</fullName>
    <description>MIS-7313</description>
    <label>Apps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>