force-app/main/default/objects/Account_Plan__c/fields/Cross_sell__c.field-meta.xml
<CustomField>
    <fullName>Cross_sell__c</fullName>
    <description>MIS-7313</description>
    <inlineHelpText>Expansion to new teams</inlineHelpText>
    <label>Cross-sell:Expansion to new teams</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>