force-app/main/default/objects/Account_Plan__c/fields/Cross_sell_Opp__c.field-meta.xml
<CustomField>
    <fullName>Cross_sell_Opp__c</fullName>
    <description>MIS-7313</description>
    <label>Cross-sell Opp $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>