force-app/main/default/objects/Account_Plan__c/fields/Cross_sell_Upsell_Potential__c.field-meta.xml
<CustomField>
    <fullName>Cross_sell_Upsell_Potential__c</fullName>
    <description>MIS-7313</description>
    <formula>Potential_ARR__c -  Account__r.fr_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cross-sell &amp; Upsell Potential</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>