force-app/main/default/objects/Account_Plan__c/fields/Current_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Current_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MIS-7313</description>
    <label>Current Subscription</label>
    <referenceTo>Zuora__Subscription__c</referenceTo>
    <relationshipLabel>Account Plans</relationshipLabel>
    <relationshipName>Account_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>