force-app/main/default/objects/Account_Plan__c/fields/Custom_Data_Feed_Opp__c.field-meta.xml
<CustomField>
    <fullName>Custom_Data_Feed_Opp__c</fullName>
    <label>Custom Data Feed Opp $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>