force-app/main/default/objects/Account_Plan__c/fields/DaaS_API__c.field-meta.xml
<CustomField>
    <fullName>DaaS_API__c</fullName>
    <description>MIS-7313</description>
    <label>DaaS / API</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>