force-app/main/default/objects/Account_Plan__c/fields/isNew__c.field-meta.xml
<CustomField>
    <fullName>isNew__c</fullName>
    <description>For use as visibility filter in lightning pages</description>
    <formula>IF(ISBLANK(CreatedDate),TRUE,FALSE)</formula>
    <label>isNew</label>
    <type>Checkbox</type>
</CustomField>