force-app/main/default/objects/Account_Plan__c/fields/My_Account_Plans_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>My_Account_Plans_Account_Owner__c</fullName>
    <description>MIS-7313</description>
    <formula>$User.Id =  Account__r.Owner.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Account Plans (Account Owner)</label>
    <type>Checkbox</type>
</CustomField>