force-app/main/default/objects/Account_Plan__c/fields/My_Team_s_Account_Plans_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>My_Team_s_Account_Plans_Account_Owner__c</fullName>
    <description>MIS-7313</description>
    <formula>OR( 
				$User.Id = Account__r.Owner.ManagerId,
				$User.Id = Account__r.Owner.Manager.ManagerId 
				)</formula>
    <label>My Team&apos;s Account Plans(Account Owner)</label>
    <type>Checkbox</type>
</CustomField>