force-app/main/default/objects/Account_Plan__c/fields/On_Site_Search__c.field-meta.xml
<CustomField>
    <fullName>On_Site_Search__c</fullName>
    <inlineHelpText>(includes real-time search)</inlineHelpText>
    <label>On-Site Search:Real-time Search</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>