force-app/main/default/objects/Account_Plan__c/fields/On_Site_Search_Upsell_Opp__c.field-meta.xml
<CustomField>
    <fullName>On_Site_Search_Upsell_Opp__c</fullName>
    <label>On-Site Search Upsell Opp $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>