force-app/main/default/objects/Account_Plan__c/fields/Organic_Upsell__c.field-meta.xml
<CustomField>
    <fullName>Organic_Upsell__c</fullName>
    <description>MIS-7313</description>
    <inlineHelpText>Countries, Historical Data, etc</inlineHelpText>
    <label>Organic Upsell:Country,History Data,API</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>