force-app/main/default/objects/Account_Plan__c/fields/Organic_Upsell_Opp__c.field-meta.xml
<CustomField>
    <fullName>Organic_Upsell_Opp__c</fullName>
    <description>MIS-7313</description>
    <label>Organic Upsell Opp $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>