force-app/main/default/objects/Account_Plan__c/fields/Other_Opp__c.field-meta.xml
<CustomField>
    <fullName>Other_Opp__c</fullName>
    <label>Other Opp $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>