force-app/main/default/objects/Account_Plan__c/fields/Permitted_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Permitted_Metrics__c</fullName>
    <inlineHelpText>(additional endpoints, SW data to 42M clients)</inlineHelpText>
    <label>Permitted Metric:Endpoint,SW data to 42M</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>