force-app/main/default/objects/Account_Plan__c/fields/Permitted_Metrics_Upsell_Opp__c.field-meta.xml
<CustomField>
    <fullName>Permitted_Metrics_Upsell_Opp__c</fullName>
    <label>Permitted Metrics Upsell Opp $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>