force-app/main/default/objects/Account_Plan__c/fields/Potential_ARR__c.field-meta.xml
<CustomField>
    <fullName>Potential_ARR__c</fullName>
    <description>MIS-7313</description>
    <formula>Account__r.fr_ARR__c  + Cross_sell_Opp__c + Organic_Upsell_Opp__c + Web_Upsell_Opp__c +   SI_Upsell_Opp__c + Shopper_Upsell_Opp__c +  AS_MS_Upsell_Opp__c +  DaaS_API_Upsell_Opp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>