force-app/main/default/objects/Account_Plan__c/fields/Retail_Data__c.field-meta.xml
<CustomField>
    <fullName>Retail_Data__c</fullName>
    <inlineHelpText>(includes Product Views &amp; Purchases, Conversions, etc)</inlineHelpText>
    <label>Retail Data:Product View &amp; Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>