force-app/main/default/objects/Account_Plan__c/fields/Stock_Intelligence__c.field-meta.xml
<CustomField>
    <fullName>Stock_Intelligence__c</fullName>
    <label>Stock Intelligence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>