force-app/main/default/objects/Account_Plan__c/fields/Stock_Intelligence_Opp__c.field-meta.xml
<CustomField>
    <fullName>Stock_Intelligence_Opp__c</fullName>
    <label>Stock Intelligence Opp $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>