force-app/main/default/objects/Account_Plan__c/fields/Upsell_Difficulty__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Difficulty__c</fullName>
    <description>MIS-7313</description>
    <label>Upsell Difficulty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>