force-app/main/default/objects/Account_Plan__c/fields/Web_Intelligence__c.field-meta.xml
<CustomField>
    <fullName>Web_Intelligence__c</fullName>
    <description>MIS-7313</description>
    <inlineHelpText>Includes segments, search tracker, etc</inlineHelpText>
    <label>Web Intelligence:Segments,Search Tracker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>