force-app/main/default/objects/Account_Plan__c/listViews/My_Account_s_Plans.listView-meta.xml
<ListView>
    <fullName>My_Account_s_Plans</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Current_Subscription__c</columns>
    <columns>Potential_ARR__c</columns>
    <columns>Cross_sell_Upsell_Potential__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_Account_Plans_Account_Owner__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>⭐️ My Account&apos;s Plans (Owner)</label>
</ListView>